--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
   "name": "formatter-plus-plus",
-  "version": "0.2.0",
+  "version": "0.5.0",
   "description": "A Javascript library to format numbers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mammoth-analytics/formatter-plus-plus.git"
   },
+  "keywords": [
+    "numric",
+    "format",
+    "formatter"
+  ],
   "author": "Ranjith BR <ranjith@mammoth.io> (mammoth.io)",
-  "license": "GPL-3.0",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/mammoth-analytics/formatter-plus-plus/issues"
   },
-  "homepage": "https://github.com/mammoth-analytics/formatter-plus-plus#readme"
+  "homepage": "https://github.com/mammoth-analytics/formatter-plus-plus#readme",
+  "engines": {
+    "node": ">=4.2.4"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.1.1"
+  }
 }
