--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.1.1"
+  },
+  "dependencies": {
+    "humanize-plus": "^1.8.2"
   }
 }
