--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "formatter-plus-plus",
-  "version": "0.5.1",
-  "description": "A Javascript library to format numbers",
+  "version": "0.5.2",
+  "description": "A Javascript library to format numbers as HTML",
   "main": "index.js",
   "scripts": {
     "test": "mocha --reporter spec"
