--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "formatter-plus-plus",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "description": "A Javascript library to format numbers as HTML",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "mocha --reporter spec",
     "build": "tsc"
